add code for qa-flatform
