# kgs-platform/api/graph/v1/graph_grpc.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-grpc v1.6.1
-// - protoc             v3.12.4
+// - protoc-gen-go-grpc v1.3.0
+// - protoc             v4.25.1
 // source: graph/v1/graph.proto
 
 package v1
@@ -15,13 +15,15 @@ import (
 
 // This is a compile-time assertion to ensure that this generated file
 // is compatible with the grpc package it is being compiled against.
-// Requires gRPC-Go v1.64.0 or later.
-const _ = grpc.SupportPackageIsVersion9
+// Requires gRPC-Go v1.32.0 or later.
+const _ = grpc.SupportPackageIsVersion7
 
 const (
 	Graph_CreateNode_FullMethodName  = "/api.graph.v1.Graph/CreateNode"
 	Graph_GetNode_FullMethodName     = "/api.graph.v1.Graph/GetNode"
 	Graph_CreateEdge_FullMethodName  = "/api.graph.v1.Graph/CreateEdge"
+	Graph_UpdateNode_FullMethodName  = "/api.graph.v1.Graph/UpdateNode"
+	Graph_DeleteNode_FullMethodName  = "/api.graph.v1.Graph/DeleteNode"
 	Graph_GetContext_FullMethodName  = "/api.graph.v1.Graph/GetContext"
 	Graph_GetImpact_FullMethodName   = "/api.graph.v1.Graph/GetImpact"
 	Graph_GetCoverage_FullMethodName = "/api.graph.v1.Graph/GetCoverage"
@@ -38,6 +40,10 @@ type GraphClient interface {
 	GetNode(ctx context.Context, in *GetNodeRequest, opts ...grpc.CallOption) (*GetNodeReply, error)
 	// Create an edge between two nodes
 	CreateEdge(ctx context.Context, in *CreateEdgeRequest, opts ...grpc.CallOption) (*CreateEdgeReply, error)
+	// Update a node's properties
+	UpdateNode(ctx context.Context, in *UpdateNodeRequest, opts ...grpc.CallOption) (*UpdateNodeReply, error)
+	// Delete a node
+	DeleteNode(ctx context.Context, in *DeleteNodeRequest, opts ...grpc.CallOption) (*DeleteNodeReply, error)
 	// Get contextual neighborhood around a node
 	GetContext(ctx context.Context, in *GetContextRequest, opts ...grpc.CallOption) (*GraphReply, error)
 	// Get downstream impact of a node
@@ -57,9 +63,8 @@ func NewGraphClient(cc grpc.ClientConnInterface) GraphClient {
 }
 
 func (c *graphClient) CreateNode(ctx context.Context, in *CreateNodeRequest, opts ...grpc.CallOption) (*CreateNodeReply, error) {
-	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(CreateNodeReply)
-	err := c.cc.Invoke(ctx, Graph_CreateNode_FullMethodName, in, out, cOpts...)
+	err := c.cc.Invoke(ctx, Graph_CreateNode_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -67,9 +72,8 @@ func (c *graphClient) CreateNode(ctx context.Context, in *CreateNodeRequest, opt
 }
 
 func (c *graphClient) GetNode(ctx context.Context, in *GetNodeRequest, opts ...grpc.CallOption) (*GetNodeReply, error) {
-	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(GetNodeReply)
-	err := c.cc.Invoke(ctx, Graph_GetNode_FullMethodName, in, out, cOpts...)
+	err := c.cc.Invoke(ctx, Graph_GetNode_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -77,9 +81,26 @@ func (c *graphClient) GetNode(ctx context.Context, in *GetNodeRequest, opts ...g
 }
 
 func (c *graphClient) CreateEdge(ctx context.Context, in *CreateEdgeRequest, opts ...grpc.CallOption) (*CreateEdgeReply, error) {
-	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(CreateEdgeReply)
-	err := c.cc.Invoke(ctx, Graph_CreateEdge_FullMethodName, in, out, cOpts...)
+	err := c.cc.Invoke(ctx, Graph_CreateEdge_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *graphClient) UpdateNode(ctx context.Context, in *UpdateNodeRequest, opts ...grpc.CallOption) (*UpdateNodeReply, error) {
+	out := new(UpdateNodeReply)
+	err := c.cc.Invoke(ctx, Graph_UpdateNode_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *graphClient) DeleteNode(ctx context.Context, in *DeleteNodeRequest, opts ...grpc.CallOption) (*DeleteNodeReply, error) {
+	out := new(DeleteNodeReply)
+	err := c.cc.Invoke(ctx, Graph_DeleteNode_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -87,9 +108,8 @@ func (c *graphClient) CreateEdge(ctx context.Context, in *CreateEdgeRequest, opt
 }
 
 func (c *graphClient) GetContext(ctx context.Context, in *GetContextRequest, opts ...grpc.CallOption) (*GraphReply, error) {
-	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(GraphReply)
-	err := c.cc.Invoke(ctx, Graph_GetContext_FullMethodName, in, out, cOpts...)
+	err := c.cc.Invoke(ctx, Graph_GetContext_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -97,9 +117,8 @@ func (c *graphClient) GetContext(ctx context.Context, in *GetContextRequest, opt
 }
 
 func (c *graphClient) GetImpact(ctx context.Context, in *GetImpactRequest, opts ...grpc.CallOption) (*GraphReply, error) {
-	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(GraphReply)
-	err := c.cc.Invoke(ctx, Graph_GetImpact_FullMethodName, in, out, cOpts...)
+	err := c.cc.Invoke(ctx, Graph_GetImpact_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -107,9 +126,8 @@ func (c *graphClient) GetImpact(ctx context.Context, in *GetImpactRequest, opts 
 }
 
 func (c *graphClient) GetCoverage(ctx context.Context, in *GetCoverageRequest, opts ...grpc.CallOption) (*GraphReply, error) {
-	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(GraphReply)
-	err := c.cc.Invoke(ctx, Graph_GetCoverage_FullMethodName, in, out, cOpts...)
+	err := c.cc.Invoke(ctx, Graph_GetCoverage_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -117,9 +135,8 @@ func (c *graphClient) GetCoverage(ctx context.Context, in *GetCoverageRequest, o
 }
 
 func (c *graphClient) GetSubgraph(ctx context.Context, in *GetSubgraphRequest, opts ...grpc.CallOption) (*GraphReply, error) {
-	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
 	out := new(GraphReply)
-	err := c.cc.Invoke(ctx, Graph_GetSubgraph_FullMethodName, in, out, cOpts...)
+	err := c.cc.Invoke(ctx, Graph_GetSubgraph_FullMethodName, in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -128,7 +145,7 @@ func (c *graphClient) GetSubgraph(ctx context.Context, in *GetSubgraphRequest, o
 
 // GraphServer is the server API for Graph service.
 // All implementations must embed UnimplementedGraphServer
-// for forward compatibility.
+// for forward compatibility
 type GraphServer interface {
 	// Create a new node in the Knowledge Graph
 	CreateNode(context.Context, *CreateNodeRequest) (*CreateNodeReply, error)
@@ -136,6 +153,10 @@ type GraphServer interface {
 	GetNode(context.Context, *GetNodeRequest) (*GetNodeReply, error)
 	// Create an edge between two nodes
 	CreateEdge(context.Context, *CreateEdgeRequest) (*CreateEdgeReply, error)
+	// Update a node's properties
+	UpdateNode(context.Context, *UpdateNodeRequest) (*UpdateNodeReply, error)
+	// Delete a node
+	DeleteNode(context.Context, *DeleteNodeRequest) (*DeleteNodeReply, error)
 	// Get contextual neighborhood around a node
 	GetContext(context.Context, *GetContextRequest) (*GraphReply, error)
 	// Get downstream impact of a node
@@ -147,36 +168,38 @@ type GraphServer interface {
 	mustEmbedUnimplementedGraphServer()
 }
 
-// UnimplementedGraphServer must be embedded to have
-// forward compatible implementations.
-//
-// NOTE: this should be embedded by value instead of pointer to avoid a nil
-// pointer dereference when methods are called.
-type UnimplementedGraphServer struct{}
+// UnimplementedGraphServer must be embedded to have forward compatible implementations.
+type UnimplementedGraphServer struct {
+}
 
 func (UnimplementedGraphServer) CreateNode(context.Context, *CreateNodeRequest) (*CreateNodeReply, error) {
-	return nil, status.Error(codes.Unimplemented, "method CreateNode not implemented")
+	return nil, status.Errorf(codes.Unimplemented, "method CreateNode not implemented")
 }
 func (UnimplementedGraphServer) GetNode(context.Context, *GetNodeRequest) (*GetNodeReply, error) {
-	return nil, status.Error(codes.Unimplemented, "method GetNode not implemented")
+	return nil, status.Errorf(codes.Unimplemented, "method GetNode not implemented")
 }
 func (UnimplementedGraphServer) CreateEdge(context.Context, *CreateEdgeRequest) (*CreateEdgeReply, error) {
-	return nil, status.Error(codes.Unimplemented, "method CreateEdge not implemented")
+	return nil, status.Errorf(codes.Unimplemented, "method CreateEdge not implemented")
+}
+func (UnimplementedGraphServer) UpdateNode(context.Context, *UpdateNodeRequest) (*UpdateNodeReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method UpdateNode not implemented")
+}
+func (UnimplementedGraphServer) DeleteNode(context.Context, *DeleteNodeRequest) (*DeleteNodeReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method DeleteNode not implemented")
 }
 func (UnimplementedGraphServer) GetContext(context.Context, *GetContextRequest) (*GraphReply, error) {
-	return nil, status.Error(codes.Unimplemented, "method GetContext not implemented")
+	return nil, status.Errorf(codes.Unimplemented, "method GetContext not implemented")
 }
 func (UnimplementedGraphServer) GetImpact(context.Context, *GetImpactRequest) (*GraphReply, error) {
-	return nil, status.Error(codes.Unimplemented, "method GetImpact not implemented")
+	return nil, status.Errorf(codes.Unimplemented, "method GetImpact not implemented")
 }
 func (UnimplementedGraphServer) GetCoverage(context.Context, *GetCoverageRequest) (*GraphReply, error) {
-	return nil, status.Error(codes.Unimplemented, "method GetCoverage not implemented")
+	return nil, status.Errorf(codes.Unimplemented, "method GetCoverage not implemented")
 }
 func (UnimplementedGraphServer) GetSubgraph(context.Context, *GetSubgraphRequest) (*GraphReply, error) {
-	return nil, status.Error(codes.Unimplemented, "method GetSubgraph not implemented")
+	return nil, status.Errorf(codes.Unimplemented, "method GetSubgraph not implemented")
 }
 func (UnimplementedGraphServer) mustEmbedUnimplementedGraphServer() {}
-func (UnimplementedGraphServer) testEmbeddedByValue()               {}
 
 // UnsafeGraphServer may be embedded to opt out of forward compatibility for this service.
 // Use of this interface is not recommended, as added methods to GraphServer will
@@ -186,13 +209,6 @@ type UnsafeGraphServer interface {
 }
 
 func RegisterGraphServer(s grpc.ServiceRegistrar, srv GraphServer) {
-	// If the following call panics, it indicates UnimplementedGraphServer was
-	// embedded by pointer and is nil.  This will cause panics if an
-	// unimplemented method is ever invoked, so we test this at initialization
-	// time to prevent it from happening at runtime later due to I/O.
-	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
-		t.testEmbeddedByValue()
-	}
 	s.RegisterService(&Graph_ServiceDesc, srv)
 }
 
@@ -246,6 +262,42 @@ func _Graph_CreateEdge_Handler(srv interface{}, ctx context.Context, dec func(in
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(GraphServer).CreateEdge(ctx, req.(*CreateEdgeRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Graph_UpdateNode_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdateNodeRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(GraphServer).UpdateNode(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Graph_UpdateNode_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(GraphServer).UpdateNode(ctx, req.(*UpdateNodeRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Graph_DeleteNode_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DeleteNodeRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(GraphServer).DeleteNode(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Graph_DeleteNode_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(GraphServer).DeleteNode(ctx, req.(*DeleteNodeRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -340,6 +392,14 @@ var Graph_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "CreateEdge",
 			Handler:    _Graph_CreateEdge_Handler,
+		},
+		{
+			MethodName: "UpdateNode",
+			Handler:    _Graph_UpdateNode_Handler,
+		},
+		{
+			MethodName: "DeleteNode",
+			Handler:    _Graph_DeleteNode_Handler,
 		},
 		{
 			MethodName: "GetContext",
